syntax = "proto3";

option java_outer_classname = "SmProto";

import "pandora/host.proto";
import "google/protobuf/empty.proto";

package pandora;

service SM {
    rpc Pair(PairRequest) returns (google.protobuf.Empty);
    rpc ProvidePairingConfirmation(PairingConfirmationRequest) returns (google.protobuf.Empty);
}

message PairRequest {
    Connection connection = 1;
}

message PairingConfirmationRequest {
    Connection connection = 1;
    bool pairing_confirmation_value = 2;
}
